--- a/HeThongBanDienThoai_Admin/Properties/Settings.settings
+++ b/HeThongBanDienThoai_Admin/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HeThongBanDienThoai_Admin.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="stringConnectSql" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Data Source=ADMIN-5ET942130\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;TrustServerCertificate=True</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
