--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -56,7 +56,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KhachHang_BUS.cs" />
+    <Compile Include="NhanVien_BUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quyen_BUS.cs" />
+    <Compile Include="NguoiDung_BUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
