--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Design" />
     <Reference Include="System.Management" />
     <Reference Include="System.Web" />
@@ -53,7 +54,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KhachHang_DAO.cs" />
+    <Compile Include="NhanVien_DAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quyen_DAO.cs" />
+    <Compile Include="NguoiDung_DAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
