--- a/MyControl/MyControl.csproj
+++ b/MyControl/MyControl.csproj
@@ -51,11 +51,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="EmailBox.Designer.cs">
+      <DependentUpon>EmailBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PhoneBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="PhoneBox.Designer.cs">
+      <DependentUpon>PhoneBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TopTaskbarButton.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TopTaskbarButton.Designer.cs">
+      <DependentUpon>TopTaskbarButton.cs</DependentUpon>
+    </Compile>
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TopTaskbarButton.resx">
+      <DependentUpon>TopTaskbarButton.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
