--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -58,7 +58,9 @@
     <Compile Include="NhanVien_DAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quyen_DAO.cs" />
+    <Compile Include="Loai_DAO.cs" />
     <Compile Include="NguoiDung_DAO.cs" />
+    <Compile Include="SanPham_DAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
