--- a/HeThongBanDienThoai_Admin/HeThongBanDienThoai_Admin.csproj
+++ b/HeThongBanDienThoai_Admin/HeThongBanDienThoai_Admin.csproj
@@ -49,21 +49,10 @@
       <HintPath>..\MyControl\bin\Debug\MyControl.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.Linq" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.DirectoryServices" />
-    <Reference Include="System.Management" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GUI\Customer Form\QL_CustomerForm.cs">
@@ -72,16 +61,16 @@
     <Compile Include="GUI\Customer Form\QL_CustomerForm.Designer.cs">
       <DependentUpon>QL_CustomerForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\Login_Form.cs">
+    <Compile Include="GUI\Home\Login_Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\Login_Form.Designer.cs">
+    <Compile Include="GUI\Home\Login_Form.Designer.cs">
       <DependentUpon>Login_Form.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\Menu_Form.cs">
+    <Compile Include="GUI\Home\Menu_Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\Menu_Form.Designer.cs">
+    <Compile Include="GUI\Home\Menu_Form.Designer.cs">
       <DependentUpon>Menu_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Role Form\insertRoleForm.cs">
@@ -114,6 +103,12 @@
     <Compile Include="GUI\User Form\QL_UserForm.Designer.cs">
       <DependentUpon>QL_UserForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Product\ListProduct_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Product\ListProduct_Form.Designer.cs">
+      <DependentUpon>ListProduct_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="LIB\DBConnect.cs" />
     <Compile Include="LIB\MyLib.cs" />
     <Compile Include="Program.cs" />
@@ -121,10 +116,10 @@
     <EmbeddedResource Include="GUI\Customer Form\QL_CustomerForm.resx">
       <DependentUpon>QL_CustomerForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Login_Form.resx">
+    <EmbeddedResource Include="GUI\Home\Login_Form.resx">
       <DependentUpon>Login_Form.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Menu_Form.resx">
+    <EmbeddedResource Include="GUI\Home\Menu_Form.resx">
       <DependentUpon>Menu_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Role Form\insertRoleForm.resx">
@@ -141,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\User Form\QL_UserForm.resx">
       <DependentUpon>QL_UserForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Product\ListProduct_Form.resx">
+      <DependentUpon>ListProduct_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -167,6 +165,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="RESOURCE\Icons\arrow-down.png" />
+    <Content Include="RESOURCE\Icons\arrow-right.png" />
     <Content Include="RESOURCE\Icons\chart.png" />
     <Content Include="RESOURCE\Icons\device.png" />
     <Content Include="RESOURCE\Icons\login.png" />
@@ -185,6 +185,5 @@
     <Content Include="RESOURCE\Logo\logo_topzone.jpg" />
     <Content Include="RESOURCE\Logo\logo_topzonePanel.png" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
