--- a/HeThongBanDienThoai_Admin/HeThongBanDienThoai_Admin.csproj
+++ b/HeThongBanDienThoai_Admin/HeThongBanDienThoai_Admin.csproj
@@ -39,6 +39,18 @@
     <Reference Include="DTO">
       <HintPath>..\DTO\bin\Debug\DTO.dll</HintPath>
     </Reference>
+    <Reference Include="Google.Apis, Version=1.68.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Apis.1.68.0\lib\net462\Google.Apis.dll</HintPath>
+    </Reference>
+    <Reference Include="Google.Apis.Auth, Version=1.68.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Apis.Auth.1.68.0\lib\net462\Google.Apis.Auth.dll</HintPath>
+    </Reference>
+    <Reference Include="Google.Apis.Core, Version=1.68.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Apis.Core.1.68.0\lib\net462\Google.Apis.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Google.Apis.Drive.v3, Version=1.68.0.3466, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Apis.Drive.v3.1.68.0.3466\lib\net462\Google.Apis.Drive.v3.dll</HintPath>
+    </Reference>
     <Reference Include="Guna.Charts.WinForms, Version=1.0.9.0, Culture=neutral, PublicKeyToken=8b9d14aa5142e261, processorArchitecture=MSIL">
       <HintPath>..\packages\Guna.Charts.WinForms.1.0.9\lib\net472\Guna.Charts.WinForms.dll</HintPath>
     </Reference>
@@ -48,11 +60,20 @@
     <Reference Include="MyControl">
       <HintPath>..\MyControl\bin\Debug\MyControl.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.CodeDom, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.CodeDom.7.0.0\lib\net462\System.CodeDom.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GUI\Customer Form\EditCustomerForm.cs">
@@ -80,6 +101,14 @@
       <DependentUpon>Menu_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Role Form\EditRoleForm.cs">
+    </Compile>
+    <Compile Include="GUI\Product\NewProduct_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Product\NewProduct_Form.Designer.cs">
+      <DependentUpon>NewProduct_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Role Form\insertRoleForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\Role Form\EditRoleForm.Designer.cs">
@@ -122,6 +151,7 @@
       <DependentUpon>ListProduct_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="LIB\DBConnect.cs" />
+    <Compile Include="LIB\ImgurUploader.cs" />
     <Compile Include="LIB\MyLib.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -139,6 +169,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Role Form\EditRoleForm.resx">
       <DependentUpon>EditRoleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Product\NewProduct_Form.resx">
+      <DependentUpon>NewProduct_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Role Form\insertRoleForm.resx">
+      <DependentUpon>insertRoleForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Role Form\QL_RoleForm.resx">
       <DependentUpon>QL_RoleForm.cs</DependentUpon>
@@ -168,6 +204,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="credentials.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -185,8 +222,10 @@
   <ItemGroup>
     <Content Include="RESOURCE\Icons\arrow-down.png" />
     <Content Include="RESOURCE\Icons\arrow-right.png" />
+    <Content Include="RESOURCE\Icons\back_icon.png" />
     <Content Include="RESOURCE\Icons\chart.png" />
     <Content Include="RESOURCE\Icons\device.png" />
+    <Content Include="RESOURCE\Icons\image-icon.png" />
     <Content Include="RESOURCE\Icons\login.png" />
     <Content Include="RESOURCE\Icons\logout-32.ico" />
     <Content Include="RESOURCE\Icons\logout-32.png" />
