--- a/HeThongBanDienThoai_Admin/App.config
+++ b/HeThongBanDienThoai_Admin/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <HeThongBanDienThoai_Admin.Properties.Settings>
             <setting name="stringConnectSql" serializeAs="String">
-                <value>Data Source=ADMIN-5ET942130\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;TrustServerCertificate=True</value>
+                <value>Data Source=DESKTOP-GVRFC16\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User Data Source=DESKTOP-GVRFC16\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;Encrypt=True;TrustServerCertificate=True</value>
             </setting>
         </HeThongBanDienThoai_Admin.Properties.Settings>
     </userSettings>
