--- a/HeThongBanDienThoai_Admin/App.config
+++ b/HeThongBanDienThoai_Admin/App.config
@@ -5,13 +5,18 @@
             <section name="HeThongBanDienThoai_Admin.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    <connectionStrings>
+        <add name="HeThongBanDienThoai_Admin.Properties.Settings.Report_ImportGoods"
+            connectionString="Data Source=DESKTOP-GVRFC16\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;Encrypt=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <userSettings>
         <HeThongBanDienThoai_Admin.Properties.Settings>
             <setting name="stringConnectSql" serializeAs="String">
-                <value>Data Source=DESKTOP-GVRFC16\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User Data Source=DESKTOP-GVRFC16\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;Encrypt=True;TrustServerCertificate=True</value>
+                <value>Data Source=DESKTOP-GVRFC16\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;Encrypt=True;TrustServerCertificate=True</value>
             </setting>
         </HeThongBanDienThoai_Admin.Properties.Settings>
     </userSettings>
