--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -54,10 +54,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiTietPhieuNhap_DAO.cs" />
+    <Compile Include="DonHang_DAO.cs" />
     <Compile Include="DungLuong_DAO.cs" />
     <Compile Include="KhachHang_DAO.cs" />
     <Compile Include="MauSac_DAO.cs" />
+    <Compile Include="NhaCungCap_DAO.cs" />
     <Compile Include="NhanVien_DAO.cs" />
+    <Compile Include="PhieuNhap_DAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quyen_DAO.cs" />
     <Compile Include="Loai_DAO.cs" />
