--- a/HeThongBanDienThoai_Admin/HeThongBanDienThoai_Admin.csproj
+++ b/HeThongBanDienThoai_Admin/HeThongBanDienThoai_Admin.csproj
@@ -36,6 +36,10 @@
     <Reference Include="BUS">
       <HintPath>..\BUS\bin\Debug\BUS.dll</HintPath>
     </Reference>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="DTO">
       <HintPath>..\DTO\bin\Debug\DTO.dll</HintPath>
     </Reference>
@@ -57,6 +61,24 @@
     <Reference Include="Guna.UI2, Version=2.0.4.6, Culture=neutral, PublicKeyToken=8b9d14aa5142e261, processorArchitecture=MSIL">
       <HintPath>..\packages\Guna.UI2.WinForms.2.0.4.6\lib\net472\Guna.UI2.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.DataVisualization, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.DataVisualization.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.Design, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.WinForms.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.Types, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.SqlServer.Types.14.0.314.76\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
+    </Reference>
     <Reference Include="MyControl">
       <HintPath>..\MyControl\bin\Debug\MyControl.dll</HintPath>
     </Reference>
@@ -68,10 +90,13 @@
       <HintPath>..\packages\System.CodeDom.7.0.0\lib\net462\System.CodeDom.dll</HintPath>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
@@ -100,6 +125,60 @@
     </Compile>
     <Compile Include="GUI\Home\Menu_Form.Designer.cs">
       <DependentUpon>Menu_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Import Goods\ImportProduct_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Import Goods\ImportProduct_Form.Designer.cs">
+      <DependentUpon>ImportProduct_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Import Goods\ListDistributor_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Import Goods\ListDistributor_Form.Designer.cs">
+      <DependentUpon>ListDistributor_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Import Goods\ListImportGoods_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Import Goods\ListImportGoods_Form.Designer.cs">
+      <DependentUpon>ListImportGoods_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Import Goods\NewDistributor_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Import Goods\NewDistributor_Form.Designer.cs">
+      <DependentUpon>NewDistributor_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Import Goods\NewImportGood_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Import Goods\NewImportGood_Form.Designer.cs">
+      <DependentUpon>NewImportGood_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Order\OrderCreate_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Order\OrderCreate_Form.Designer.cs">
+      <DependentUpon>OrderCreate_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Order\OrderProcessing_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Order\OrderProcessing_Form.Designer.cs">
+      <DependentUpon>OrderProcessing_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Report\Des_Report_PrintImports.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Des_Report_PrintImports.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="GUI\Report\ReportPhieuNhap_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Report\ReportPhieuNhap_Form.Designer.cs">
+      <DependentUpon>ReportPhieuNhap_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Role Form\EditRoleForm.cs">
       <SubType>Form</SubType>
@@ -166,6 +245,34 @@
     <EmbeddedResource Include="GUI\Home\Menu_Form.resx">
       <DependentUpon>Menu_Form.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Import Goods\ImportProduct_Form.resx">
+      <DependentUpon>ImportProduct_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Import Goods\ListDistributor_Form.resx">
+      <DependentUpon>ListDistributor_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Import Goods\ListImportGoods_Form.resx">
+      <DependentUpon>ListImportGoods_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Import Goods\NewDistributor_Form.resx">
+      <DependentUpon>NewDistributor_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Import Goods\NewImportGood_Form.resx">
+      <DependentUpon>NewImportGood_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Order\OrderCreate_Form.resx">
+      <DependentUpon>OrderCreate_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Order\OrderProcessing_Form.resx">
+      <DependentUpon>OrderProcessing_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Report\Des_Report_PrintImports.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>Des_Report_PrintImports.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Report\ReportPhieuNhap_Form.resx">
+      <DependentUpon>ReportPhieuNhap_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Role Form\EditRoleForm.resx">
       <DependentUpon>EditRoleForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -220,6 +327,7 @@
     <Content Include="RESOURCE\Icons\back_icon.png" />
     <Content Include="RESOURCE\Icons\chart.png" />
     <Content Include="RESOURCE\Icons\device.png" />
+    <Content Include="RESOURCE\Icons\icon_print.png" />
     <Content Include="RESOURCE\Icons\image-icon.png" />
     <Content Include="RESOURCE\Icons\login.png" />
     <Content Include="RESOURCE\Icons\logout-32.ico" />
@@ -236,6 +344,11 @@
     <Content Include="RESOURCE\Logo\logo-video.png" />
     <Content Include="RESOURCE\Logo\logo_topzone.jpg" />
     <Content Include="RESOURCE\Logo\logo_topzonePanel.png" />
+    <Content Include="RESOURCE\Logo\thumbtopzone2_800x450-600x400.jpg" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
