--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -67,7 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DB_DTDD.designer.cs">
+    <Compile Include="DB_DTDD1.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DB_DTDD.dbml</DependentUpon>
@@ -83,8 +83,8 @@
     <None Include="app.config" />
     <None Include="DB_DTDD.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>DB_DTDD.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>DB_DTDD1.designer.cs</LastGenOutput>
     </None>
     <None Include="DB_DTDD.dbml.layout">
       <DependentUpon>DB_DTDD.dbml</DependentUpon>
