Update Set role and Promotion

--- a/HeThongBanDienThoai_Admin/App.config
+++ b/HeThongBanDienThoai_Admin/App.config
@@ -16,7 +16,7 @@
     <userSettings>
         <HeThongBanDienThoai_Admin.Properties.Settings>
             <setting name="stringConnectSql" serializeAs="String">
-                <value>Data Source=DOUBLED;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;TrustServerCertificate=True</value>
+                <value>Data Source=DESKTOP-GVRFC16\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;TrustServerCertificate=True</value>
             </setting>
         </HeThongBanDienThoai_Admin.Properties.Settings>
     </userSettings>
