--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -101,6 +101,7 @@
     <Compile Include="NhanVien_BUS.cs" />
     <Compile Include="PhieuNhap_BUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuyenNguoiDung_BUS.cs" />
     <Compile Include="Quyen_BUS.cs" />
     <Compile Include="Loai_BUS.cs" />
     <Compile Include="NguoiDung_BUS.cs" />
