--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -82,6 +82,7 @@
     <Compile Include="NhanVien_DAO.cs" />
     <Compile Include="PhieuNhap_DAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuyenNguoiDung_DAO.cs" />
     <Compile Include="Quyen_DAO.cs" />
     <Compile Include="Loai_DAO.cs" />
     <Compile Include="SanPham_DAO.cs" />
