--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -72,6 +72,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DB_DTDD.dbml</DependentUpon>
     </Compile>
+    <Compile Include="View_DanhSachDonHang.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
