--- a/HeThongBanDienThoai_Admin/HeThongBanDienThoai_Admin.csproj
+++ b/HeThongBanDienThoai_Admin/HeThongBanDienThoai_Admin.csproj
@@ -61,6 +61,16 @@
     <Reference Include="Guna.UI2, Version=2.0.4.6, Culture=neutral, PublicKeyToken=8b9d14aa5142e261, processorArchitecture=MSIL">
       <HintPath>..\packages\Guna.UI2.WinForms.2.0.4.6\lib\net472\Guna.UI2.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 12.0\Visual Studio Tools for Office\PIA\Office15\Microsoft.Office.Interop.Excel.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 12.0\Visual Studio Tools for Office\PIA\Office15\Microsoft.Office.Interop.Word.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.WebForms.150.1652.0\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
     </Reference>
@@ -73,12 +83,6 @@
     <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.WebForms.150.1652.0\lib\net40\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.ReportViewer.WebDesign, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.WebForms.150.1652.0\lib\net40\Microsoft.ReportViewer.WebDesign.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ReportViewer.WebForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.WebForms.150.1652.0\lib\net40\Microsoft.ReportViewer.WebForms.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.WinForms.dll</HintPath>
     </Reference>
@@ -90,6 +94,18 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.Compression.Base">
+      <HintPath>..\..\..\..\ThuVienExportWord\ThuVienExportWord\Syncfusion.Compression.Base.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.DocIO.Base">
+      <HintPath>..\..\..\..\ThuVienExportWord\ThuVienExportWord\Syncfusion.DocIO.Base.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.OfficeChart.Base">
+      <HintPath>..\..\..\..\ThuVienExportWord\ThuVienExportWord\Syncfusion.OfficeChart.Base.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.XlsIO.Base">
+      <HintPath>..\..\..\..\ThuVienExportWord\ThuVienExportWord\Syncfusion.XlsIO.Base.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.CodeDom, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -112,6 +128,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GUI\Configuration\Configuration_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Configuration\Configuration_Form.Designer.cs">
+      <DependentUpon>Configuration_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Customer Form\EditCustomerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -184,6 +206,12 @@
     <Compile Include="GUI\Order\OrderProcessing_Form.Designer.cs">
       <DependentUpon>OrderProcessing_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Promotion Form\AddProductPromotionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Promotion Form\AddProductPromotionForm.Designer.cs">
+      <DependentUpon>AddProductPromotionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Promotion Form\EditPromotionForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -232,6 +260,12 @@
     <Compile Include="GUI\Role Form\EditRoleForm.Designer.cs">
       <DependentUpon>EditRoleForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Role Form\InsertRole_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Role Form\InsertRole_Form.Designer.cs">
+      <DependentUpon>InsertRole_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Role Form\QL_RoleForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -256,6 +290,12 @@
     <Compile Include="GUI\Staff Form\QL_StaffForm.Designer.cs">
       <DependentUpon>QL_StaffForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Statistical\IndexStatistical_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Statistical\IndexStatistical_Form.Designer.cs">
+      <DependentUpon>IndexStatistical_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\User Form\QL_UserForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -268,17 +308,31 @@
     <Compile Include="GUI\Product\ListProduct_Form.Designer.cs">
       <DependentUpon>ListProduct_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\User Form\ResetPass_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\User Form\ResetPass_Form.Designer.cs">
+      <DependentUpon>ResetPass_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\User Form\UserAssignRoleForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\User Form\UserAssignRoleForm.Designer.cs">
       <DependentUpon>UserAssignRoleForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="LIB\Constants.cs" />
     <Compile Include="LIB\DBConnect.cs" />
+    <Compile Include="LIB\ExcelExport.cs" />
+    <Compile Include="LIB\FileCommon.cs" />
+    <Compile Include="LIB\Global.cs" />
     <Compile Include="LIB\ImgurUploader.cs" />
     <Compile Include="LIB\MyLib.cs" />
+    <Compile Include="LIB\WordExport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GUI\Configuration\Configuration_Form.resx">
+      <DependentUpon>Configuration_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Customer Form\EditCustomerForm.resx">
       <DependentUpon>EditCustomerForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -315,6 +369,9 @@
     <EmbeddedResource Include="GUI\Order\OrderProcessing_Form.resx">
       <DependentUpon>OrderProcessing_Form.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Promotion Form\AddProductPromotionForm.resx">
+      <DependentUpon>AddProductPromotionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Promotion Form\EditPromotionForm.resx">
       <DependentUpon>EditPromotionForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -341,6 +398,9 @@
     <EmbeddedResource Include="GUI\Product\NewProduct_Form.resx">
       <DependentUpon>NewProduct_Form.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Role Form\InsertRole_Form.resx">
+      <DependentUpon>InsertRole_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Role Form\QL_RoleForm.resx">
       <DependentUpon>QL_RoleForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -353,11 +413,17 @@
     <EmbeddedResource Include="GUI\Staff Form\QL_StaffForm.resx">
       <DependentUpon>QL_StaffForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Statistical\IndexStatistical_Form.resx">
+      <DependentUpon>IndexStatistical_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\User Form\QL_UserForm.resx">
       <DependentUpon>QL_UserForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Product\ListProduct_Form.resx">
       <DependentUpon>ListProduct_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\User Form\ResetPass_Form.resx">
+      <DependentUpon>ResetPass_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\User Form\UserAssignRoleForm.resx">
       <DependentUpon>UserAssignRoleForm.cs</DependentUpon>
@@ -387,6 +453,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\log-out_10024482.png" />
     <Content Include="RESOURCE\Icons\arrow-down.png" />
     <Content Include="RESOURCE\Icons\arrow-right.png" />
     <Content Include="RESOURCE\Icons\back_icon.png" />
