--- a/DTO/app.config
+++ b/DTO/app.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="DTO.Properties.Settings.QL_DTDDConnectionString" connectionString="Data Source=DOUBLED;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;TrustServerCertificate=True"
+        <add name="DTO.Properties.Settings.QL_DTDDConnectionString" connectionString="Data Source=DESKTOP-GVRFC16\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
