--- a/HeThongBanDienThoai_Admin/HeThongBanDienThoai_Admin.csproj
+++ b/HeThongBanDienThoai_Admin/HeThongBanDienThoai_Admin.csproj
@@ -124,15 +124,34 @@
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GUI\Configuration\AddColor_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Configuration\AddColor_Form.Designer.cs">
+      <DependentUpon>AddColor_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Configuration\AddLoai_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Configuration\AddLoai_Form.Designer.cs">
+      <DependentUpon>AddLoai_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Configuration\Configuration_Form.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\Configuration\Configuration_Form.Designer.cs">
       <DependentUpon>Configuration_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Configuration\EditColor_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Configuration\EditColor_Form.Designer.cs">
+      <DependentUpon>EditColor_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Customer Form\EditCustomerForm.cs">
       <SubType>Form</SubType>
@@ -296,6 +315,18 @@
     <Compile Include="GUI\Statistical\IndexStatistical_Form.Designer.cs">
       <DependentUpon>IndexStatistical_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Statistical\StantisticalOnline_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Statistical\StantisticalOnline_Form.Designer.cs">
+      <DependentUpon>StantisticalOnline_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Statistical\StatisticalInStrore_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Statistical\StatisticalInStrore_Form.Designer.cs">
+      <DependentUpon>StatisticalInStrore_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\User Form\QL_UserForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -330,8 +361,17 @@
     <Compile Include="LIB\WordExport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GUI\Configuration\AddColor_Form.resx">
+      <DependentUpon>AddColor_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Configuration\AddLoai_Form.resx">
+      <DependentUpon>AddLoai_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Configuration\Configuration_Form.resx">
       <DependentUpon>Configuration_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Configuration\EditColor_Form.resx">
+      <DependentUpon>EditColor_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Customer Form\EditCustomerForm.resx">
       <DependentUpon>EditCustomerForm.cs</DependentUpon>
@@ -415,6 +455,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Statistical\IndexStatistical_Form.resx">
       <DependentUpon>IndexStatistical_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Statistical\StantisticalOnline_Form.resx">
+      <DependentUpon>StantisticalOnline_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Statistical\StatisticalInStrore_Form.resx">
+      <DependentUpon>StatisticalInStrore_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\User Form\QL_UserForm.resx">
       <DependentUpon>QL_UserForm.cs</DependentUpon>
