--- a/HeThongBanDienThoai_Admin/Properties/Settings.settings
+++ b/HeThongBanDienThoai_Admin/Properties/Settings.settings
@@ -2,9 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HeThongBanDienThoai_Admin.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="stringConnectSql" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Data Source=DOUBLED;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;TrustServerCertificate=True</Value>
-    </Setting>
     <Setting Name="Report_ImportGoods" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
@@ -12,7 +9,9 @@
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=DESKTOP-GVRFC16\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;Encrypt=True;TrustServerCertificate=True</Value>
-
+    </Setting>
+    <Setting Name="stringConnectSql" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Data Source=DESKTOP-GVRFC16\BAOTOAN;Initial Catalog=QL_DTDD;Persist Security Info=True;User ID=sa;Password=123;TrustServerCertificate=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
